<resources>
    <string name="app_name">App_Chat</string>
    <string name="welcome_back">Chào mừng trở lại!</string>
    <string name="login_to_continue">Đăng nhập để tiếp tục</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="create_new_account">Tạo tài khoản mới</string>
    <string name="add_image">Thêm avatar</string>
    <string name="name">Tên</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="sign_up">Đăng kí</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">Type a message</string>
    <string name="chat">Chat</string>
    <string name="friend">Bạn bè</string>
    <string name="user">Cá nhân</string>
    <string name="search">Tìm kiếm</string>
    <string name="aa">Aa</string>
    <string name="add_friends">Thêm bạn</string>
    <string name="confirm">Confirm</string>
    <string name="wait">Wait</string>
    <string name="success_sent_friend">Đã gửi yêu cầu kết bạn thành công</string>
    <string name="success_add_friend">Thêm bạn thành công</string>
    <string name="image_default">/9j/4AAQSkZJRgABAQAAAQABAAD/2wBDABALDA4MChAODQ4SERATGCgaGBYWGDEjJR0oOjM9PDkzODdASFxOQERXRTc4UG1RV19iZ2hnPk1xeXBkeFxlZ2P/2wBDARESEhgVGC8aGi9jQjhCY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2P/wAARCACWAJYDASIAAhEBAxEB/8QAGwABAAIDAQEAAAAAAAAAAAAAAAUGAgQHAwH/xABBEAABAwIDBAUJBAgHAAAAAAABAAIDBBEFITEGEkFREyJhcZEUFSMygaGxwdEkUlOiFjM1QmJyc7JDVIKSk8Lx/8QAFAEBAAAAAAAAAAAAAAAAAAAAAP/EABQRAQAAAAAAAAAAAAAAAAAAAAD/2gAMAwEAAhEDEQA/AOfoiICIiAiLJjHSPaxjS5zjYNaLklBiin6HZOvqQ187mUzDwdm7w+pCmqfZDD4y0zPmmIGYLt1p8M/egoyLpMOB4XALMooj/ON/43Xr5qw7/IUv/C36IOYoujTbPYVMbuo2NP8AAS34FRlRsZSub9mqZY3X/fAcPkgpiKVxDZ3EKBhe6MSxgXL4jvAd41UUgIiICIiAiIgIiICIrJs3s8aotrK1loBmyMj9Z2ns+KDTwbZ6pxO0rvQ01/1jhm7+Uce9XbD8MpMOj3aWENJFnPObnd5W01rWMDWNDWtFgALABfUBERAREQEREBROK7P0eJBzw0Q1B/xWDXvHH4qWRBzLEsMqsMm6OpZYH1Xtza7uK011OqpYKyAw1MTZGHgRp2jkVz/G8Gmwmexu+Bx6kltew8igjEREBERARFkxjpHtYxpc5xsABmSgltnMI851u9KD5NFm/wDiPBq6A1rWMDWNDWtFgALABauFULMOw+KmbYlou9w/ecdSttAREQEXnPMyCMvee4cSoeoq5Kgm5szg0IJV9ZTsNnSi/Zn8FgMQp7+uR/pKhkQT0VRDNlHICeWhXqq4t2lr3xndlJeznxCCWRfGuDmhzSCDoQvqAteuooa+lfT1DbsdoeLTzHathEHLq+jloKySmmHWYcj94cCtdXna/DvKaAVcbfS0+ZsMyzj4a+KoyAiIgKf2PohU4oZ3tuynbvDlvHIfM+xQCvOxcHR4Q+UtAMspIPMCw+N0FgREQE0ReFc/cpJDxIt4oIusqDUTEg9QZNC10RAREQEREEhhlRZ3QuOR9XsKk1XmOLHteNWm6sIIIBGhQEREHxzWvYWvAc1wsQdCFzHEqU0WI1FMQQI3kNvru8D4WXT1SdtoNzE4Zg0BssVr8yDn7iEFcREQF0nAIRBgdGwcYw//AHZ/Nc2XTsJ/ZFF/QZ/aEG2iIgLTxQE0otwcLrcXlVR9LTSMGtri3NBAoiICIiAiIgKwQAiCMHUNHwUHBH0szGZ9Y525KfQEREBVnbiEOoqabiyQs8Rf/qrMq9tt+yIv64/tcgo6IiAujbNymbAaVx1DS3wJHyXOVc9iKhrqGop895km/wCwi3yPigsyIiAiIgicQpjFJ0jR1He4rSVic0PaWuAIOoKiquhERLo3t3fuudYoNJERARfWguIAtnzNlJ0dAxtpJHNeeABuEH3DaYxt6V46ztByC3kRAREQFVduZSIaSEaOc5x9gAHxKtSoe2NQ2bGujbf0MbWHlfM/MIIJERAUrs1XNoMXjdIQI5R0bieF7WPiAopEHWUUTs5igxLDmh7r1EIDZL8eR9vxupR72xsL3mzRqUGS1KiviiyZ6R3YcvFadXXPmJay7We8rTQbMtbPLfr7o5NyWuviICIiAsmuc03aSDzBWKINyHEZmZPtIO3IqQp6qKcdV1nfdOqg19BIIINiOIQWJFHUeIaRznuf9VIoPKqqI6SmkqJTZkbS4/RcvqZnVNTLO+wdI8vNuZN1adssUBDcOhdncOmt7h8/BVJAREQEREG5hWIyYZXMqI8wMnt+83iFb5cQGIMZJGfQkXaPr2qiLcw7EH0UvF0Tj1m/MILUi86eojqYhJE7eafEHkV6ICIiAiIgIiICIiAsqnHDhlE4OG/IRaIHn29gWnXYhFRM6/WkOjAc/wDxVioqJKmYyyuu4+A7EGEkj5ZXSSOLnvJc4niSsURAREQEUhgNDFiWM0tHO57Y5XWcWEAjI6XW8/ZoNpqENr4zW1jYpG0/RPs1kjt1ri8AjUi97e3K4QKK1R7HwSSSyMxb7FDHI6Sc0zmlroyN5u4Tcix1F9CFi7Y9kVVJTVGJtjl8oNPCBA5wkdusc25Hq3D876W4oK5TVMtLIHwvLTxHA94U7TY5TyN9PeJw7CQV7foduU5ZLiDW4iKU1XkjYiRu3sOve2th9Rmvak2OpqmrqKaDEXVEkTJGG0D42smbazS4ggi+ts0Hn51ovxvyu+iedaL8b8rvotWo2dhjw7EaqmxEzuoZNx0XQFrtWgkgm7cy7gfV4aDKn2c6fAG4iK5jZXwyztpzGc2xus7rX5W4cfag2POtF+N+V30X1uKUTnACcXJtm0j5Laj2MpIqqGKrxeN28HNfHC3rh4aXWGZyFnXJA0tbPKm747UFzRQceOMhgijbA5xYwNJLraBeEuOVbwQwRx56gXPvQWGWWOFhfK8MaOJKh63HBYspBn+I4fAfVQ0s0kxvLI55GhcbrBBk97pHl73FzjqSbkrFEQEREBERBnDNLTytlgkfFI3Nr2OII7iFsnFa80DaHyubyZrt4R7xsOXsyvbS+aIgyqMZxOqdeevqHnozFnIc2m1x3GwvztmveLaTFoaV8MdZK0yPL3y75Mjrta3Mk8A0W4hEQa/nfEfIhRCtqBTAEdGJDaxFrd3ZovtRjOJ1Vunr6h9ozHnIc2nUHnfjfVEQPPWJmOSM19SWyPbI68hJLm6G+txYeA5BeTsRrnAh1bUEEPBBldmHm7hrxOvNEQes+M4nUOidNX1D3QtLWOMhuAb3z7QbX5LRREBERAREQEREBERAREQf/9k=</string>
    <string name="custom">Custom</string>
    <string name="other_action">Other action</string>
    <string name="delete_chat">XÓa cuộc trò chuyện</string>
    <string name="create_a_chat_group_with_diu">Tạo nhóm với bạn của bạn</string>
    <string name="nickname">Biệt danh</string>
    <string name="background">Ảnh nền</string>
    <string name="success_background_update">Cập nhật ảnh nền thành công</string>
    <string name="set_a_nickname">Đặt biệt danh</string>
    <string name="edit_nicknames">Chỉnh sửa biệt danh</string>
    <string name="nickname_Attention1">Only</string>
    <string name="nickname_Attention2">BIệt hiệu sẽ được nhìn thấy trong cuộc trò chuyện</string>
    <string name="cancel">Bỏ qua</string>
    <string name="save">Lưu</string>
    <string name="success_nickname_change">Thay đổi biệt danh thành công</string>
    <string name="dark_mode">Sáng/tối</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="language">Ngôn ngữ</string>
    <string name="log_out">Đăng xuất</string>
    <string name="name_group_not_left_blank">Không để trống tên nhóm</string>
    <string name="success_create_chat_group">Tạo nhóm thành công</string>
    <string name="create_a_group">Tạo nhóm</string>
</resources>