<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_content_all"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_nickname"
    android:padding="@dimen/_5sdp"
    android:layout_margin="@dimen/_10sdp">

    <TextView
        android:id="@+id/textEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/edit_nicknames"
        android:textSize="@dimen/_20sdp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/textAttention"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="@dimen/_16sdp"
        android:gravity="center"
        android:textColor="@color/black"
        android:ellipsize="end"
        android:maxLines="2"
        app:layout_constraintTop_toBottomOf="@+id/textEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <EditText
        android:id="@+id/inputNickname"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_28sdp"
        android:background="@drawable/background_input"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintTop_toBottomOf="@id/textAttention"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_10sdp"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@id/inputNickname">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonCancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_weight="1"
            android:textSize="@dimen/_13ssp"
            app:cornerRadius="8dp"
            android:backgroundTint="@color/white2"
            android:textColor="@color/black"
            android:text="@string/cancel"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:text="@string/save"
            app:cornerRadius="8dp"
            android:backgroundTint="@color/white2"
            android:textColor="@color/black"
            android:layout_weight="1"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>