<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:background="@color/white2"
    android:scrollbars="none"
    tools:context=".activityes.InfoActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageBack"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/ic_back"
            android:padding="@dimen/_6sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:tint="@color/black"/>
        <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
            android:id="@+id/imageProfile"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/background_icon"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:riv_corner_radius="@dimen/_50sdp"/>
        <TextView
            android:id="@+id/textName"
            android:text=""
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/imageProfile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <LinearLayout
            android:id="@+id/layout_custom"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp"
            app:layout_constraintTop_toBottomOf="@id/textName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:layout_marginLeft="@dimen/_8sdp"
                android:padding="@dimen/_8sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/custom"
                android:textSize="@dimen/_15ssp"
                android:textColor="@color/black"
                />

            <LinearLayout
                android:id="@+id/buttonBackground"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@drawable/background_content_bottom"
                android:paddingTop="@dimen/_8ssp"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingBottom="@dimen/_8sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/ic_round"
                    android:layout_margin="@dimen/_5sdp"
                    android:tint="@color/blue"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/background"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sdp"
                    android:layout_marginTop="@dimen/_4sdp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/buttonNickname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@drawable/background_content_top"
                android:paddingTop="@dimen/_8ssp"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingBottom="@dimen/_8sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/ic_nickname"
                    android:layout_margin="@dimen/_5sdp"
                    android:tint="@color/blue"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nickname"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sdp"
                    android:layout_marginTop="@dimen/_4sdp"/>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_otherAction"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp"
            app:layout_constraintTop_toBottomOf="@id/layout_custom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:layout_marginLeft="@dimen/_8sdp"
                android:padding="@dimen/_8sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other_action"
                android:textSize="@dimen/_15ssp"
                android:textColor="@color/black"
                />

            <LinearLayout
                android:id="@+id/buttonCreateGroupChat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@drawable/background_content_bottom"
                android:paddingTop="@dimen/_8ssp"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingBottom="@dimen/_8sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/ic_groups"
                    android:layout_margin="@dimen/_5sdp"
                    android:tint="@color/blue"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_a_chat_group_with_diu"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sdp"
                    android:layout_marginTop="@dimen/_4sdp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/buttonDeleteChat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@drawable/background_content_top"
                android:paddingTop="@dimen/_8ssp"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingBottom="@dimen/_8sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/ic_delete"
                    android:layout_margin="@dimen/_5sdp"
                    android:tint="@color/blue"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_chat"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sdp"
                    android:layout_marginTop="@dimen/_4sdp"/>
            </LinearLayout>


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>